fix: use padding-left to move template from overlapping text

--- a/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.scss
+++ b/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.scss
@@ -89,7 +89,7 @@ mgt-agenda {
         position: relative;
         bottom: 8px;
         top: 0px;
-        left: 32px;
+        padding-left: 32px;
 
         &.narrow {
           position: inherit;
